# public

irc/packs/: awptic3.5.tgz  eggdrop1.1.7h.tgz  redline-src.tgz
irc/packs/awptic3.5/: CONTENTS  FEATURES  Makefile.in  Makefile.in.orig  README  addpatch  awptic.tcl  botchk  configure  configure.in  eggdrop.conf  lush.h.in  makesalt  makesalt.c  motd  new1.1.6.txt  ol.tcl  salt.h  weed
irc/packs/awptic3.5/doc/: CONTENTS  MODULES  compiling.FAQ  eggdrop.doc  patch.howto  tcl-commands.doc  tcl-commands.doc.orig  tricks
irc/packs/awptic3.5/help/: email  go  help  notes  status  who
irc/packs/awptic3.5/help/dcc/: Pignore  _chrec  banner  bans  bottree  chaninfo  channel  chat  chattr  chemail  console  files  helpparty  info  jump  kick  kickban  match  me  msg  quit  reset  resetbans  simul  strip  trace  unloadmodule  whom
irc/packs/awptic3.5/help/dcc/filesys/: ln  lsa  pwd  rm  rmdir
irc/packs/awptic3.5/help/dcc/set/: admin  botnet_nick  botnick  console  ctcp_finger  default_port  firewall  flood_chan  flood_ctcp  ignore_time  incoming_path  init_server  keep_nick  learn_users  max_dloads  max_queue_msg  modes_per_line  network  nick  note_life  owner  realname  set  switch_logfiles_at  temp_path  uptime  username  wait_info  wait_split  whois_fields
irc/packs/awptic3.5/scripts/: action.fix.tcl  dike.tcl  local.tcl  ques3.tcl  samples.tcl  toolkit.tcl  unserv.tcl  wire.tcl
irc/packs/awptic3.5/src/: Makefile  awptic.c  botcmd.c  botnet.c  chan.c  chan.h  chanprog.c  chanset.c  cmds.c  cmdt.h  dcc.c  dccutil.c  eggdrop.h  eggdrop.hub.h  eggdrop.leaf.h  english.h  gotdcc.c  hash.c  hash.h  main.c  mem.c  misc.c  mode.c  modules.c  modules.h  msgcmds.c  msgnotice.c  net.c  notes.c  pcrypt.c  proto.h  tcl.c  tclchan.c  tcldcc.c  tclegg.h  tclhash.c  tclmisc.c  tcluser.c  userrec.c  users.c  (+1 more)
irc/packs/awptic3.5/src/idea/: Makefile
irc/packs/awptic3.5/src/md5/: Makefile  endian.c  md5.c  md5.h  md5hl.c  must_align.c
irc/packs/awptic3.5/src/mod/assoc.mod/: Makefile  assoc.c  assoc.c.orig
irc/packs/awptic3.5/src/mod/blowfish.mod/: Makefile  blowfish.c  blowfish.c.orig
irc/packs/awptic3.5/src/mod/filesys.mod/: Makefile  dccfiles.c.orig  filesys.c
irc/packs/awptic3.5/src/mod/transfer.mod/: transfer.c  transfer.c.orig
irc/packs/awptic3.5/text/: files  newbot
irc/packs/eggdrop1.1.5+str87l/: Makefile  Makefile.in  README  acconfig.h  addpatch  botchk  config  config.h.in  configure  configure.in  new1.1.6.txt  putegg
irc/packs/eggdrop1.1.5+str87l/doc/: UPDATES  nets.list  tcl-commands.doc
irc/packs/eggdrop1.1.5+str87l/doc/man1/: eggdrop.1
irc/packs/eggdrop1.1.5+str87l/help/: die  info  invite  memory  pass  rehash  reset  whois
irc/packs/eggdrop1.1.5+str87l/help/dcc/: Pbot  Pbothost  Phost  Puser  _ban  _bothost  _host  addlog  adduser  assoc  away  binds  boot  bots  chaddr  chanload  chanset  chpass  comment  dccstat  deluser  deop  die  email  fixcodes  ignores  newpass  page  rehash  relay  reload  restart  save  say  status  su  topic  unlink  who  whois
irc/packs/eggdrop1.1.5+str87l/plain/: servers.txt
irc/packs/eggdrop1.1.5+str87l/scripts/: CONTENTS  alltools.tcl  bx.tcl  console.tcl  getops-1.8.tcl  monitor.tcl  secauth.tcl  tnt.tcl  toolbox.tcl
irc/packs/eggdrop1.1.5+str87l/src/: Makefile  botcmd.c  botcrypt.c  bothash.c  bothash.gperf  botnet.c  chan.c  chan.h  chanprog.c  chanset.c  cmds.c  dcc.c  dccutil.c  eggdrop.h  fakelibdl.c  files.h  gotdcc.c  hash.c  hash.h  iiegg.c  is_here.h  main.c  match.c  mem.c  misc.c  mode.c  modules.c  modules.h  msgcmds.c  msgnotice.c  net.c  notes.c  proto.h  strfix.h  tandem.h  tcl.c  tclchan.c  tcldcc.c  tclegg.h  tclhash.c  (+5 more)
irc/packs/eggdrop1.1.5+str87l/src/crypt/: Makefile  README  base64.c  cfile.c  cfile.h  crc32.c  global.h  is_here.h  md5hl.c  proto.h  r_stdlib.c  rsaref.h  tnt_dh576.h
irc/packs/eggdrop1.1.5+str87l/src/mod/: module.h  modvals.h
irc/packs/eggdrop1.1.5+str87l/text/: intro  newbot-limbo
irc/packs/eggdrop1.1.8/: Makefile  Makefile.in  README  README.mikee  addpatch  botchk  config.h.in  configure  configure.in  eggdrop.conf  motd
irc/packs/eggdrop1.1.8/encrypt/: blowfish.c  blowfish.h  encrypt.c  encrypt.h
irc/packs/eggdrop1.1.8/help/: ident  jump  op
irc/packs/eggdrop1.1.8/help/dcc/: Pban  Pchan  Pchrec  _bot  _chan  _ignore  _user  act  adduser  botinfo  chaninfo  chansave  chbotattr  chinfo  chnick  common  debug  dump  echo  filestats  flush  help  invite  link  loadmodule  modules  motd  nick  note  notes  op  servers  stick  strip  unstick
irc/packs/eggdrop1.1.8/help/dcc/filesys/: cd  hide  ls  mv  pending  share  unhide  unshare
irc/packs/eggdrop1.1.8/help/dcc/set/: altnick  connect_timeout  ctcp_userinfo  ctcp_version  dcc_block  default_flags  files_path  keep_all_logs  max_file_users  max_filesize  max_notes  motd  my_hostname  my_ip  never_give_up  notefile  notify_newusers  notify_users_at  passive  require_p  reserved_port  save_users_at  server_timeout  text_path  upload_to_pwd  use_info  xfer_timeout
irc/packs/eggdrop1.1.8/src/: Makefile  botcmd.c  botnet.c  chan.c  chan.h  chanprog.c  chanset.c  cmds.c  dcc.c  dccutil.c  eggdrop.h  fileutil.c  gotdcc.c  hash.c  hash.h  main.c  match.c  mem.c  misc.c  mode.c  modules.c  msgcmds.c  msgnotice.c  net.c  notes.c  proto.h  tandem.h  tcl.c  tclchan.c  tcldcc.c  tclegg.h  tclhash.c  tclmisc.c  tcluser.c  userrec.c  users.c
irc/packs/eggdrop1.1.8/src/mod/: Makefile  module.h  modvals.h
irc/packs/eggdrop1.1.8/src/mod/blowfish.mod/: blowfish.c
irc/packs/eggdrop1.1.8/src/mod/filesys.mod/: files.c  filesys.c  filesys.h  tclfiles.c
irc/packs/eggdrop1.1.8/src/mod/transfer.mod/: transfer.c
irc/packs/eggdrop1.1.8/text/: CONTENTS  badhost  banner  newuser
irc/tcl/: abusive.tcl  alpha.tcl  awptic.tcl  cf.tcl  chrome.tcl  core.tcl  d.tcl  dc.tcl  denied.tcl  doa.tcl  dot.tcl  drain-hub.tcl  drain.tcl  eris.tcl  fuckover.tcl  fusion.tcl  injustice.tcl  jethub.tcl  monitor.tcl  ms.tcl  nod.tcl  omega-hub.tcl  omega.tcl  plasma.tcl  pork.tcl  rpz.tcl  secauth.tcl  strife.tcl  tc.tcl  tnt.tcl  violate.tcl
(+32 files in other folders)
